--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
             "aApp\\": "src/"
         }
     },
+    "minimum-stability": "dev",
     "require": {
         "php": "^5.5 || ^7.0",
         "amphp/process": "^0.1.2"
