--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "deiloff-media/aapp",
     "description": "A non-blocking concurrency framework for PHP applications",
     "license": "MIT",
+    "version": "0.0.1",    
     "keywords": ["async", "mvp", "multiplttform"],
     "homepage": "https://github.com/deiloff-media/aapp",
     "autoload": {
